add latex of g4 proton, but the angle is wrong

--- a/docs/reports/dpolconfig/dpolconfig.tex
+++ b/docs/reports/dpolconfig/dpolconfig.tex
@@ -45,7 +45,11 @@
 
 \section{config}
 
-\subsection{dpol hit exitwindow}
+\subsection{deutron hit exitwindow}
+
+\begin{frame}
+    \tableofcontents[currentsection]
+\end{frame}
 
 \begin{frame}
     \frametitle{Operational Constraints} % 或者是 Magnetic Field Requirements
@@ -91,7 +95,7 @@
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.8\linewidth]{figures/2026-01-18-15-06-55.png}
-	\caption{1.2T}
+	\caption{1.2T} 
 	\label{fig:2026-01-18-15-06-55}
 \end{figure}
 
@@ -109,6 +113,187 @@
 	\caption{0.8T}
 	\label{fig:2026-01-18-15-08-25}
 \end{figure}
+
+
+\subsection{proton hit exitwindow}
+
+\begin{frame}
+    \tableofcontents[currentsection]
+\end{frame}
+
+\begin{frame}
+    i'am afriad that i caculate the wrong posit ion of target. 
+
+    i should use geant4 code to do cross check with my Runge-Kutta code that caculate the deutron trajectory.
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/2026-01-26-04-22-34.png}
+	\caption{Caption}
+	\label{fig:2026-01-26-04-22-34}
+\end{figure}
+
+
+\end{frame}
+
+% -------------------------------------------------------------------
+% Magnetic Field B = 2.0 T (Satisfies Requirement)
+% -------------------------------------------------------------------
+\begin{frame}[allowframebreaks]{Simulation Scan: B = 2.0 T (Baseline)}
+    \centering
+    % 2.0 deg
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B200T_2.0deg.png}
+        \caption{protons\_B200T\_2.0deg.png}
+    \end{figure}
+    
+    % 4.0 deg
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B200T_4.0deg.png}
+        \caption{protons\_B200T\_4.0deg.png}
+    \end{figure}
+
+    % 6.0 deg
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B200T_6.0deg.png}
+        \caption{protons\_B200T\_6.0deg.png}
+    \end{figure}
+
+    % 8.0 deg
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B200T_8.0deg.png}
+        \caption{protons\_B200T\_8.0deg.png}
+    \end{figure}
+
+    % 10.0 deg
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B200T_10.0deg.png}
+        \caption{protons\_B200T\_10.0deg.png}
+    \end{figure}
+\end{frame}
+
+% -------------------------------------------------------------------
+% Magnetic Field B = 1.6 T (Below Requirement)
+% -------------------------------------------------------------------
+\begin{frame}[allowframebreaks]{Simulation Scan: B = 1.6 T}
+    \centering
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B160T_2.0deg.png}
+        \caption{protons\_B160T\_2.0deg.png}
+    \end{figure}
+    
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B160T_4.0deg.png}
+        \caption{protons\_B160T\_4.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B160T_6.0deg.png}
+        \caption{protons\_B160T\_6.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B160T_8.0deg.png}
+        \caption{protons\_B160T\_8.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B160T_10.0deg.png}
+        \caption{protons\_B160T\_10.0deg.png}
+    \end{figure}
+\end{frame}
+
+% -------------------------------------------------------------------
+% Magnetic Field B = 1.2 T
+% -------------------------------------------------------------------
+\begin{frame}[allowframebreaks]{Simulation Scan: B = 1.2 T}
+    \centering
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B120T_2.0deg.png}
+        \caption{protons\_B120T\_2.0deg.png}
+    \end{figure}
+    
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B120T_4.0deg.png}
+        \caption{protons\_B120T\_4.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B120T_6.0deg.png}
+        \caption{protons\_B120T\_6.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B120T_8.0deg.png}
+        \caption{protons\_B120T\_8.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B120T_10.0deg.png}
+        \caption{protons\_B120T\_10.0deg.png}
+    \end{figure}
+\end{frame}
+
+% -------------------------------------------------------------------
+% Magnetic Field B = 1.0 T
+% -------------------------------------------------------------------
+\begin{frame}[allowframebreaks]{Simulation Scan: B = 1.0 T}
+    \centering
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B100T_2.0deg.png}
+        \caption{protons\_B100T\_2.0deg.png}
+    \end{figure}
+    
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B100T_4.0deg.png}
+        \caption{protons\_B100T\_4.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B100T_6.0deg.png}
+        \caption{protons\_B100T\_6.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B100T_8.0deg.png}
+        \caption{protons\_B100T\_8.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B100T_10.0deg.png}
+        \caption{protons\_B100T\_10.0deg.png}
+    \end{figure}
+\end{frame}
+
+% -------------------------------------------------------------------
+% Magnetic Field B = 0.8 T (Worst Case)
+% -------------------------------------------------------------------
+\begin{frame}[allowframebreaks]{Simulation Scan: B = 0.8 T}
+    \centering
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B080T_2.0deg.png}
+        \caption{protons\_B080T\_2.0deg.png}
+    \end{figure}
+    
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B080T_4.0deg.png}
+        \caption{protons\_B080T\_4.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B080T_6.0deg.png}
+        \caption{protons\_B080T\_6.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B080T_8.0deg.png}
+        \caption{protons\_B080T\_8.0deg.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \includegraphics[width=0.6\linewidth]{figures/geant4proton/protons_B080T_10.0deg.png}
+        \caption{protons\_B080T\_10.0deg.png}
+    \end{figure}
+\end{frame}
 
 
 \subsection{target outside magnetic}
@@ -182,15 +367,328 @@
 \end{frame}
 
 
+
+% ==========================================
+% SECTION: 0 Degrees Configuration
+% ==========================================
+
+% --- Frame 1: 0deg (0.80T - 1.40T) ---
+\begin{frame}{PDC Position: 0 deg (Low Field)}
+    \begin{figure}[!ht]
+        \centering
+        % Row 1
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_0.80T_0deg.png}
+            \caption{0.80 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.00T_0deg.png}
+            \caption{1.00 T}
+        \end{subfigure}
+        
+        \vspace{-0.2cm} 
+        
+        % Row 2
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.20T_0deg.png}
+            \caption{1.20 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.40T_0deg.png}
+            \caption{1.40 T}
+        \end{subfigure}
+        \caption{Configuration at 0 deg: 0.80 -- 1.40 T}
+    \end{figure}
+\end{frame}
+
+% --- Frame 2: 0deg (1.60T - 2.20T) ---
+\begin{frame}{PDC Position: 0 deg (Mid Field)}
+    \begin{figure}[!ht]
+        \centering
+        % Row 1
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.60T_0deg.png}
+            \caption{1.60 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.80T_0deg.png}
+            \caption{1.80 T}
+        \end{subfigure}
+        
+        \vspace{-0.2cm} 
+        
+        % Row 2
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.00T_0deg.png}
+            \caption{2.00 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.20T_0deg.png}
+            \caption{2.20 T}
+        \end{subfigure}
+        \caption{Configuration at 0 deg: 1.60 -- 2.20 T}
+    \end{figure}
+\end{frame}
+
+% --- Frame 3: 0deg (2.40T - 3.00T) ---
+\begin{frame}{PDC Position: 0 deg (High Field)}
+    \begin{figure}[!ht]
+        \centering
+        % Row 1
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.40T_0deg.png}
+            \caption{2.40 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.60T_0deg.png}
+            \caption{2.60 T}
+        \end{subfigure}
+        
+        \vspace{-0.2cm} 
+        
+        % Row 2
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.80T_0deg.png}
+            \caption{2.80 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_3.00T_0deg.png}
+            \caption{3.00 T}
+        \end{subfigure}
+        \caption{Configuration at 0 deg: 2.40 -- 3.00 T}
+    \end{figure}
+\end{frame}
+
+% ==========================================
+% SECTION: 5 Degrees Configuration
+% ==========================================
+
+% --- Frame 4: 5deg (0.80T - 1.40T) ---
+\begin{frame}{PDC Position: 5 deg (Low Field)}
+    \begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_0.80T_5deg.png}
+            \caption{0.80 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.00T_5deg.png}
+            \caption{1.00 T}
+        \end{subfigure}
+        \vspace{-0.2cm} 
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.20T_5deg.png}
+            \caption{1.20 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.40T_5deg.png}
+            \caption{1.40 T}
+        \end{subfigure}
+        \caption{Configuration at 5 deg: 0.80 -- 1.40 T}
+    \end{figure}
+\end{frame}
+
+% --- Frame 5: 5deg (1.60T - 2.20T) ---
+\begin{frame}{PDC Position: 5 deg (Mid Field)}
+    \begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.60T_5deg.png}
+            \caption{1.60 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.80T_5deg.png}
+            \caption{1.80 T}
+        \end{subfigure}
+        \vspace{-0.2cm} 
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.00T_5deg.png}
+            \caption{2.00 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.20T_5deg.png}
+            \caption{2.20 T}
+        \end{subfigure}
+        \caption{Configuration at 5 deg: 1.60 -- 2.20 T}
+    \end{figure}
+\end{frame}
+
+% --- Frame 6: 5deg (2.40T - 3.00T) ---
+\begin{frame}{PDC Position: 5 deg (High Field)}
+    \begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.40T_5deg.png}
+            \caption{2.40 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.60T_5deg.png}
+            \caption{2.60 T}
+        \end{subfigure}
+        \vspace{-0.2cm} 
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.80T_5deg.png}
+            \caption{2.80 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_3.00T_5deg.png}
+            \caption{3.00 T}
+        \end{subfigure}
+        \caption{Configuration at 5 deg: 2.40 -- 3.00 T}
+    \end{figure}
+\end{frame}
+
+% ==========================================
+% SECTION: 10 Degrees Configuration
+% ==========================================
+
+% --- Frame 7: 10deg (0.80T - 1.40T) ---
+\begin{frame}{PDC Position: 10 deg (Low Field)}
+    \begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_0.80T_10deg.png}
+            \caption{0.80 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.00T_10deg.png}
+            \caption{1.00 T}
+        \end{subfigure}
+        \vspace{-0.2cm} 
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.20T_10deg.png}
+            \caption{1.20 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.40T_10deg.png}
+            \caption{1.40 T}
+        \end{subfigure}
+        \caption{Configuration at 10 deg: 0.80 -- 1.40 T}
+    \end{figure}
+\end{frame}
+
+% --- Frame 8: 10deg (1.60T - 2.20T) ---
+\begin{frame}{PDC Position: 10 deg (Mid Field)}
+    \begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.60T_10deg.png}
+            \caption{1.60 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_1.80T_10deg.png}
+            \caption{1.80 T}
+        \end{subfigure}
+        \vspace{-0.2cm} 
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.00T_10deg.png}
+            \caption{2.00 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.20T_10deg.png}
+            \caption{2.20 T}
+        \end{subfigure}
+        \caption{Configuration at 10 deg: 1.60 -- 2.20 T}
+    \end{figure}
+\end{frame}
+
+% --- Frame 9: 10deg (2.40T - 3.00T) ---
+\begin{frame}{PDC Position: 10 deg (High Field)}
+    \begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.40T_10deg.png}
+            \caption{2.40 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.60T_10deg.png}
+            \caption{2.60 T}
+        \end{subfigure}
+        \vspace{-0.2cm} 
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_2.80T_10deg.png}
+            \caption{2.80 T}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \includegraphics[width=\textwidth, trim=30 30 30 30, clip]{figures/test_pdc_position/config_3.00T_10deg.png}
+            \caption{3.00 T}
+        \end{subfigure}
+        \caption{Configuration at 10 deg: 2.40 -- 3.00 T}
+    \end{figure}
+\end{frame}
+
+
 \section{filter}
  
-\subsection{pdc position}
+\subsection{nebula acceptance}
+
+\begin{frame}
+    
+
+The neutron acceptance depends on the beam bending angle. Although different magnetic field settings cause slight differences in position, the impact of the magnetic field is negligible. The angle should be smaller than $10^{\circ}$. Furthermore, the neutron distribution does not correlate with the proton changes; for neutrons within a specific region, the corresponding protons are distributed across nearly the entire space, indicating no significant correlation.
+
+% 某一个区域内中子, 对应的质子也几乎弥散在全部的空间上 ,没有明显的相关性. (翻译此句话)
+
+For neutrons within a specific region, the corresponding protons are distributed across nearly the entire space, indicating no significant correlation.
+\end{frame}
 
 
-\subsection{pdc acceptence}
 
 
-\subsection{}
 
 
 \end{document}
