add neutron in latex beamer and 0 deg geant4 in latex

--- a/docs/reports/dpolconfig/dpolconfig.tex
+++ b/docs/reports/dpolconfig/dpolconfig.tex
@@ -12,6 +12,7 @@
 \usepackage{xcolor}
 \usepackage{hyperref}
 \usepackage{tikz}
+\usepackage{xfp}
 \usepackage{subcaption}
 \usepackage{graphicx}
 \usepackage{pgffor} % [EN] Required for \foreach loop / [CN] 用于foreach循环
@@ -325,6 +326,9 @@
         \end{itemize}
     \end{itemize}
 \end{frame}
+
+\include{angle0deg}
+
 
 \begin{frame}
 \begin{figure}[!ht] % 1. 使用 !ht 强制当前位置
