add geant4 1.0T to 1.2T magnetic in the tex

--- a/docs/reports/dpolconfig/combine.tex
+++ b/docs/reports/dpolconfig/combine.tex
@@ -17,9 +17,6 @@
             {\tiny $\theta = 8.0^\circ$} & {\tiny $\theta = 10.0^\circ$} & \\
         \end{tabular}
         \vfill
-        \begin{itemize}
-            \item {\color{magenta}Magenta}: Deuteron (380 MeV)
-            \item {\color{blue}Blue}: Proton trajectories
-        \end{itemize}
+        \color{magenta}Magenta Deuteron (380 MeV), \color{yellow}yellow: Proton  trajectories \color{green}green: neutron
     \end{frame}
 }
