--- a/docs/reports/dpolconfig/dpolconfig.tex
+++ b/docs/reports/dpolconfig/dpolconfig.tex
@@ -44,10 +44,10 @@
   %  list of content 生成目录
 \tableofcontents  
 \end{frame}
-
 \section{config}
 
 \include{combine}
+\include{detailMag}
 
 % \subsection{deutron hit exitwindow}
 
