add detail 1.15 T, see if hit the frame. but still dont know the beam spot size

--- a/docs/note_log/log202602.md
+++ b/docs/note_log/log202602.md
@@ -3,3 +3,7 @@
 ## 2026-02-05
 
 test detailed magnetic field map reading and interpolation.
+
+1 ,2 ,5, 10, 20 mm . it seemsq
+
+https://deepwiki.com/search/fdc_38ac4fc5-737b-489a-aab0-3aa43ae39291?mode=deep
