--- a/docs/reports/dpolconfig/dpolconfig.tex
+++ b/docs/reports/dpolconfig/dpolconfig.tex
@@ -96,6 +96,21 @@ magnetic field: 0.8, 1.0, 1.2, 1.6, 2.0 T
 \end{columns} 
 
 
+\begin{frame}
+    \begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/2026-02-09-21-23-38.png}
+	\caption{Caption}
+	\label{fig:2026-02-09-21-23-38}
+\end{figure}
+\end{frame}
+
+
+
+
+
+\section{backup}
+
 
 \end{frame}
 \subsection{target outside magnetic}
