add qmd raw data tex file

--- a/docs/note_log/log202602.md
+++ b/docs/note_log/log202602.md
@@ -7,3 +7,18 @@ test detailed magnetic field map reading and interpolation.
 1 ,2 ,5, 10, 20 mm . it seemsq
 
 https://deepwiki.com/search/fdc_38ac4fc5-737b-489a-aab0-3aa43ae39291?mode=deep
+
+
+更改sim_deuteron_core
+
+  - 不再复用/删除 G4RotationMatrix* 指针
+  - 用栈对象 G4RotationMatrix target_rm + G4Transform3D 传入 G4PVPlacement
+
+## 2026-2-12
+
+今天先把detail的mag的qmd filter跑出来. 应该要加上磁场文件的路径参数.
+
+2deg 3deg 4deg 5deg, 1.10T 1.15T 1.20T 的filter跑出来.
+
+
+再仔细考虑一下cut.
