--- a/docs/reports/dpolconfig/dpolconfig.tex
+++ b/docs/reports/dpolconfig/dpolconfig.tex
@@ -96,6 +96,7 @@ magnetic field: 0.8, 1.0, 1.2, 1.6, 2.0 T
 \end{columns} 
 
 
+\end{frame}
 \begin{frame}
     \begin{figure}[ht]
 	\centering
@@ -105,14 +106,33 @@ magnetic field: 0.8, 1.0, 1.2, 1.6, 2.0 T
 \end{figure}
 \end{frame}
 
+\section{other config}
 
+\begin{frame}
+    \tableofcontents[currentsection]
+\end{frame}
+
+\begin{frame}
+%     - [] target
+% - [] vacuum exit whindos
+% - [] 支架 in magnet
+% - [] polar mechanics
+    \frametitle{other config}
+   Prof.Xiao wants to discuss other configurations(exp preparation) including: 
+    \begin{itemize}
+        \item Target 
+        \item Vacuum exit windows (do we keep vacuum during the exp)
+        \item Support structure inside magnet
+        \item beam dumper
+        \item Polarimeter mechanics
+    \end{itemize}
+\end{frame}
 
 
 
 \section{backup}
 
 
-\end{frame}
 \subsection{target outside magnetic}
 
 \begin{frame}
